--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,6 +1,13 @@
 <div class="container-fluid d-flex justify-content-center align-items-center background h-100">
     <div class="container mt-5">
       <h2 class="mb-4">Lista de Roupas</h2>
+
+      <div class="mb-3">
+        <a routerLink="/create-clothe" class="btn btn-success btn-sm">
+          <i class="bi bi-plus-lg"></i> Adicionar Nova Roupa
+        </a>
+      </div>
+
       <div *ngIf="clothes.length > 0; else noClothes">
         <table class="table table-striped table-bordered">
           <thead class="thead-dark">
