--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -30,7 +30,7 @@
               <td>{{ clothe.color }}</td>
               <td>{{ clothe.material }}</td>
               <td>
-                <button class="btn btn-warning btn-sm me-2" (click)="editClothe(clothe)">
+                <button class="btn btn-warning btn-sm me-2" (click)="editClothe(clothe.id)">
                     <i class="bi bi-pencil"></i> <!-- Ícone de lápis para editar -->
                 </button>
                 <button class="btn btn-danger btn-sm" (click)="deleteClothe(clothe.id)">
